# Llama-cpp-Launcher

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  app.rs  build.sh  config.rs  i18n.rs  llamacpp-launcher.desktop  main.rs  screenshot.png~  server.rs
src/: app.rs  config.rs  i18n.rs  main.rs  server.rs
