[package]
name = "llamacpp-launcher"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
ureq = { version = "3", features = ["json"] }
webbrowser = "1"
sys-locale = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = "symbols"
